package com.unina.project;

public class Corso {
    public String titolo;
    public String descrizione;
    public Integer iscrizioniMassime;
    public Float tassoPresenzeMinime;
}
