package com.unina.project;

public class Studente {
}
