package project;

import java.util.List;

public class Gestore {
    public String nome;
    public String Descrizione;
    public Sede sede;
    public String telefono;
    public List<Corso> corsi;
}
