package project;

import java.util.List;

public class Operatore extends Utente{
    public List<Corso> corsi;

}
